@@ -109,6 +109,7 @@ CFLAGS-err.c = -fexceptions
 CFLAGS-tst-tsearch.c = $(stack-align-test-flags)
 CFLAGS-msync.c = -fexceptions
 CFLAGS-fdatasync.c = -fexceptions
+CFLAGS-fsync.c = -fexceptions
 
 # Called during static library initialization, so turn stack-protection
 # off for non-shared builds.
